# nodejs/routes/v1/home/index.js
@@ -1,6 +1,6 @@
 const { Router } = require('express')
 
-const { index, getSubCat, viewCode, filtercodes } = require('../../../controllers/home.controller')
+const { index, getSubCat, viewCode, filtercodes, saveCodeImage } = require('../../../controllers/home.controller')
 
 const router = Router()
 
@@ -8,5 +8,6 @@ router.get('/', index)
 router.get('/getsubcat/:id', getSubCat)
 router.get('/viewcode/:id', viewCode)
 router.post('/filtercodes', filtercodes)
+router.post('/savecodeimage/:id', saveCodeImage)
 
 module.exports = router
